--- a/help.html
+++ b/help.html
@@ -27,9 +27,10 @@
       </nav>
     </header>
     <section class="db w-100 tc pb4 ph4 ph5-l">
-        <h1 class="f3 f1-l fw7 mb3 mb5-l mt4 mt0-l museo-700">Our Privacy Policy</h1>
-        <p class="f5 fw3 mb4 lh-title white mw7 center sans-serif">Pippip’s privacy policy is very simple. We will never give or sell your personal information to anyone, for any reason. We will never reveal the contents of your messages to anyone, ever. We will never use your messages or personal information for any purpose. We will never monitor or track your account for any reason. That’s it.</p>
-        <p class="f5 fw3 mb4 lh-title white mw7 center sans-serif">We can keep our privacy policy simple because your Pippip account is completely private and completely anonymous. We couldn’t track your activities or monitor you message even if we wanted to. Your messages are encrypted from device to device. Once you receive your messages, they are deleted from our servers. All of your account information is encrypted in a way that only you can access and stored under a private identity that only you know.</p>
+        <h1 class="f3 f1-l fw7 mb3 mb5-l mt4 mt0-l museo-700">Help</h1>
+        <p class="f5 fw3 mb4 lh-title white mw7 center sans-serif">For help with Pippip Messaging, send a contact request to Pippip Support. Your request will normally be processed within 5 to 10 minutes. After your request is accepted, you may send your questions in a message.</p>
+        <p class="f3 fw7 mb4 lh-title white mw7 center museo-700">Quick Start Guide</p>
+        <p class="f5 fw3 mb4 lh-title white mw7 center sans-serif">Slider will go here...</p>
     </section>
     
     <section class="db pt5 pt6-l pb5 ph4 ph5-l tc bg-white">
