--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       <a href='http://play.google.com/store/?pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' height="40" width="auto" src='./images/google-play-badge.png'/></a>
     </section>
 
-    <footer class="bg-dark-blue white">
+    <footer class="bg-dark-blue white sans-serif">
       <nav class="db dt-l w-100 border-box pa3 ph5-l bg-dark-blue">
         <p class="db dtc-l v-mid white w-100 w-25-l tc tl-l mb2 mb0-l">All Rights Reserved Pippip</p>
         <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
