Adds slider to Help page

--- a/help.html
+++ b/help.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Secure. Anonymous. Messaging for the 21st Century.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="http://pippip.com" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="./css/style.min.css">
   </head>
   <body class="bg-dark-blue white museo-300">
@@ -30,7 +31,32 @@
         <h1 class="f3 f1-l fw7 mb3 mb5-l mt4 mt0-l museo-700">Help</h1>
         <p class="f5 fw3 mb4 lh-title white mw7 center sans-serif">For help with Pippip Messaging, send a contact request to Pippip Support. Your request will normally be processed within 5 to 10 minutes. After your request is accepted, you may send your questions in a message.</p>
         <p class="f3 fw7 mb4 lh-title white mw7 center museo-700">Quick Start Guide</p>
-        <p class="f5 fw3 mb4 lh-title white mw7 center sans-serif">Slider will go here...</p>
+        
+        <div class="js-slick-slider mw6 center">
+          <div><img src="./images/quick-start-guide/quick-start-guide-1.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-2.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-3.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-4.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-5.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-6.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-7.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-8.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-9.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-10.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-11.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-12.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-13.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-14.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-15.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-16.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-17.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-18.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-19.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-20.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-21.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-22.jpg"></div>
+        </div>
+
     </section>
     
     <section class="db pt5 pt6-l pb5 ph4 ph5-l tc bg-white">
@@ -177,5 +203,16 @@
         </div>
       </nav>
     </footer>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.js-slick-slider').slick({
+          dots: false
+        });
+      });
+    </script>
   </body>
 </html>
