Pushes new stuff

--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>
-      Privacy Policy | Pippip | Messaging for the 21st Century
+      Help | Pippip | Messaging for the 21st Century
     </title>
     <meta name="author" content="Pippip Messaging">
     <meta name="description" content="Secure. Anonymous. Messaging for the 21st Century.">
@@ -12,6 +12,14 @@
     <link rel="canonical" href="http://pippip.com" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="./css/style.min.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#376272">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body class="bg-dark-blue white museo-300">
     
@@ -55,6 +63,10 @@
           <div><img src="./images/quick-start-guide/quick-start-guide-20.jpg"></div>
           <div><img src="./images/quick-start-guide/quick-start-guide-21.jpg"></div>
           <div><img src="./images/quick-start-guide/quick-start-guide-22.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-23.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-24.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-25.jpg"></div>
+          <div><img src="./images/quick-start-guide/quick-start-guide-26.jpg"></div>
         </div>
 
     </section>
