--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -43,7 +43,7 @@
     <section class="db pt5 pt6-l pb5 ph4 ph5-l tc bg-white">
       <p class="f3 f1-l fw7 mb3 mt4 mt0-l museo-700 orange">Download & Install App</p>
       <p class="f5 f3-l fw3 mb4 mb5-l lh-title black sans-serif">Pippip is now available for iOS and Android devices.</p>
-      <a href="https://www.amazon.com/Apple-iPhone-Warranty-Unlocked-Cellphone/dp/B015E8UTIU/ref=sr_1_2?ie=UTF8&qid=1481330742&sr=8-2&keywords=iphone+6s" class="dib grow">
+      <a href="https://amzn.to/2Ph32Os" class="dib grow">
         <svg version="1.1" id="US_UK_Download_on_the" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="135px" height="40px" viewBox="0 0 135 40" enable-background="new 0 0 135 40" xml:space="preserve">
           <g>
@@ -171,7 +171,7 @@
           </g>
         </svg>
       </a>
-      <a href='http://play.google.com/store/?pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' height="40" width="auto" src='./images/google-play-badge.png'/></a>
+      <a href='https://amzn.to/2Ph32Os'><img alt='Get it on Google Play' height="40" width="auto" src='./images/google-play-badge.png'/></a>
     </section>
 
     <footer class="bg-dark-blue white sans-serif">
