updates links and canonical url

--- a/help.html
+++ b/help.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Pippip Messaging">
     <meta name="description" content="Secure. Anonymous. Messaging for the 21st Century.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="http://pippip.com" />
+    <link rel="canonical" href="https://www.pippip.io" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="./css/style.min.css">
 
