--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Pippip Messaging">
     <meta name="description" content="Secure. Anonymous. Messaging for the 21st Century.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="http://pippip.com" />
+    <link rel="canonical" href="https://www.pippip.io" />
     <link rel="stylesheet" href="./css/style.min.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
